@@ -1,1 +1,1 @@
-#define TAGSISTANT_BUILDNUMBER "20140127.000019"
+#define TAGSISTANT_BUILDNUMBER "20140127.000020"
